<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="cl.yerkodee.ionix_test.repository.utils.Resource" />

        <variable
            name="catResource"
            type="Resource" />

        <variable
            name="retryCallback"
            type="cl.yerkodee.ionix_test.ui.common.RetryCall" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_shell" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/spacing_middle"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_activity_welcome"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_activity_username"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/spacing_middle"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:onClick="developerMessage"
                            android:src="@drawable/ic_help"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_activity_version"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/spacing_xmedium"
                        android:layout_marginEnd="@dimen/spacing_xmedium"
                        android:layout_marginBottom="@dimen/spacing_xmedium"
                        android:clipToPadding="false"
                        android:scrollbars="vertical"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                        app:spanCount="3"
                        tools:listitem="@layout/item_list_category" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <include
            layout="@layout/loader_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xmedium"
            android:layout_marginTop="@dimen/spacing_xmedium"
            android:layout_marginEnd="@dimen/spacing_xmedium"
            android:layout_marginBottom="@dimen/spacing_xmedium"
            app:callback="@{() -> retryCallback.retry()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:resource="@{catResource}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>